[package]
name = "plotpy"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "Rust plotting library using Python (Matplotlib)"
homepage = "https://github.com/cpmech/plotpy"
repository = "https://github.com/cpmech/plotpy"
documentation = "https://docs.rs/plotpy"
readme = "README.md"
categories = ["mathematics", "science"]
keywords = ["plot", "2D", "3D", "python", "matplotlib"]

[dependencies]
russell_lab = { path = "../russell/russell_lab", version = "0.5" }
russell_chk = { path = "../russell/russell_chk", version = "0.5" }
