[package]
name = "plotpy"
version = "1.7.1"
edition = "2021"
license = "MIT"
description = "Rust plotting library using Python (Matplotlib)"
homepage = "https://github.com/cpmech/plotpy"
repository = "https://github.com/cpmech/plotpy"
documentation = "https://docs.rs/plotpy"
readme = "README.md"
categories = ["mathematics", "science"]
keywords = ["plot", "2D", "3D", "python", "matplotlib"]

[dependencies]
